# jobscrapper

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ai_analyzer.py  commands.sh  config.py  email_sender.py  llm_filter.py  main.py  pyproject.toml  requirements.txt  scraper.py  setup.sh
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: job_hunter.yml
agent/: __init__.py  graph.py  state.py
agent/feedback/: __init__.py  store.py
agent/nodes/: __init__.py  analyzer.py  reviewer.py  summarizer.py
agent/prompts/: analyzer_prompt.py  reviewer_prompt.py
data/: .gitignore  .gitkeep  reviewer_feedback.jsonl
filtering/: job_filter.py  llm_filter.py
infra/: json_repair.py  llm_client.py  models.py
notification/: email_sender.py
src/: main.py
src/agent/: graph.py  state.py
src/agent/feedback/: store.py
src/agent/nodes/: analyzer.py  base.py  summarizer.py
src/agent/prompts/: analyzer_prompt.py  summarizer_prompt.py
src/filtering/: job_filter.py
src/infra/: __init__.py  llm_client.py  logging_config.py  models.py  scraper.py
src/notification/: email_sender.py
src/storage/: data_manager.py  database.py
src/utils/: config.py
storage/: data_manager.py  database.py
tests/: conftest.py  eval_report.py  test_analyzer.py  test_eval.py  test_reviewer.py  test_summarizer.py
tests/fixtures/: eval_jobs.py  jobs.py
